@startuml

entity Recipe {
	description String,
	prepTime Integer,
    cookTime Integer,
    servings Integer,
    source String,
    url String,
    directions String,
    difficulty Difficulty,
    image Blob
}

entity Category {
	categoryName String
}

entity Ingredient {
	description String,
	amount BigDecimal
}

entity UnitOfMeasure {
	uom String
}

entity Notes {
	notes String
}

enum Difficulty {
	EASY, MODERATE, HARD
}

Recipe "1" <--> "1" Notes
Recipe "1" ---> "*" Ingredient
Recipe "*" <--- "1" Ingredient
Recipe "*" ---> "*" Category
Recipe "*" <--- "*" Category
Recipe ---> Difficulty
Ingredient "1" <--> "1" UnitOfMeasure

@enduml
